# diesel-template

./: .env  .gitignore  Cargo.toml
src/: main.rs  model.rs  schema.rs
