[package]
name = "simple-web-app"
version = "0.1.0"
authors = ["connorjcantrell <connorcantrell@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
hyper = "0.13"
r2d2 = "0.8"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
dotenv = "0.15"
uuid = { version = "0.8", features = ["serde", "v4"] }


